hphp/hack/test/typecheck/array/nullable_array_access_wrong_element.php.exp
ERROR: File "nullable_array_access_wrong_element.php", line 5, characters 10-15:
You are trying to access an element of this container but the container could be `null`.  (Typing[4063])
  File "nullable_array_access_wrong_element.php", line 4, characters 17-26:
  This is what makes me believe it can be `null`
