hphp/hack/test/typecheck/array/nullable_array_access_wrong_element.php
<?hh


function testit(?vec<bool> $vb):float {
  return $vb[0];
}
